# info-2025

./: .gitignore  README.md  config.yml  main.py  map.yml  pyproject.toml  requirements.txt  strategy.yml  test.py
LIDAR_LD06_python_loder-main/: my_lidar.py  teddy_lidar.py  teddy_lidar_revisited.py
configuration/: config.yml  map.yml  map_bleu.yml  map_jaune.yml  strategy.yml  strategy_bleu.yml  strategy_jaune.yml
modules/: template.py
modules/communication/: base.py  i2c_communication.py  speed.py  speed_communication.py
modules/controller/: positionController.py
modules/effectors/: effectors_control.py
modules/lidar/: flowpy_lidar.py  guy_lidar.py  lidar.py  lidar_parser.py  my_lidar.py  teddy_lidar_NOT_USED.py  teddy_lidar_revisited.py  test.py
modules/management/: scoring.py  tirette.py
modules/navigation/: path_checks.py  path_following.py  position_controller.py  position_controller_NOT_USED.py
modules/slam/: position_tracker.py
modules/strategy/: deploy_strategy.py  structure_validator.py
ressources/path/: path.json
simulation/: real_simulation.py
strategies/: default.yml
tests/: count_treat_lidar_test.py  detection.test.py  effectors.test.py  i2c.test.py  interruptor_team_test.py  led_blink_test.py  lidar.test.py  myOtos_test.py  navigation.test.py  odometry_test.py  raw_lidar.test.py  raw_stepper.test.py  strategy.test.py  tirette_test.py
tiik_motors_control/: platformio.ini
tiik_motors_control/lib/SpeedController/: SpeedController.cpp  (+1 more)
tiik_motors_control/src/: main.cpp
utils/: config.py  log.py  position.py  tools.py
