[project]
name = "info-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "pygame>=2.6.1",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
    "simple-pid>=2.0.1",
    "smbus2>=0.5.0",
    "systemd>=0.17.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
