[project]
name = "info-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "pygame>=2.6.1",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
    "simple-pid>=2.0.1",
    "smbus2>=0.5.0",
    "systemd>=0.17.1",
    "jsonschema",
    "sparkfun-qwiic-otos @ git+https://github.com/sparkfun/Qwiic_OToS_Py.git"
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["modules", "strategies", "simulation", "ressources", "tests", "utils"]